--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Growth-X | Fai crescere la tua startup</title>
   <meta name="description" content="La tua conulenza per la crescita. Aumentiamo il tuo ROI grazie al Growth Hacking e Agile. Prenota 15 Minuti di consulenza gratuita."/>
 
+  <!-- FB open graph -->
+  <meta property="og:url" content="https://gbimpiantielettrici.github.io/Growth-X/index.html" /> 
+  <meta property="og:title" content="Growth-X | Fai crescere la tua startup" /> 
+  <meta property="og:image" content="https://gbimpiantielettrici.github.io/Growth-X/Growth-x GRUPPO.png" /> 
+  <meta property="og:description" content="La tua conulenza per la crescita. Aumentiamo il tuo ROI grazie al Growth Hacking e Agile. Prenota 15 Minuti di consulenza gratuita." />
+
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
