--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="description" content="La tua conulenza per la crescita. Aumentiamo il tuo ROI grazie al Growth Hacking e Agile. Prenota 15 Minuti di consulenza gratuita."/>
 
   <!-- FB open graph -->
-  <meta property="og:url" content="https://growthxitalia.com" /> 
+  <meta property="og:url" content="http://growthxitalia.com" /> 
   <meta property="og:title" content="Growth-X | Fai crescere la tua startup" /> 
-  <meta property="og:image" content="https://growthxitalia.com/growthx.png" /> 
+  <meta property="og:image" content="http://growthxitalia.com/growthx.png" /> 
   <meta property="og:description" content="La tua conulenza per la crescita. Aumentiamo il tuo ROI grazie al Growth Hacking e Agile. Prenota 15 Minuti di consulenza gratuita." />
 
   <!-- CSS  -->
