--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:url" content="http://growthxitalia.com" /> 
   <meta property="og:title" content="Growth-X | Fai crescere la tua startup" /> 
   <meta property="og:image" content="http://growthxitalia.com/growthx.png" /> 
-  <meta property="og:description" content="La tua conulenza per la crescita. Aumentiamo il tuo ROI grazie al Growth Hacking e Agile. Prenota 15 Minuti di consulenza gratuita." />
+  <meta property="og:description" content="La tua consulenza per la crescita. Aumentiamo il tuo ROI grazie al Growth Hacking e Agile. Prenota 15 Minuti di consulenza gratuita." />
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
