--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Growth-X | Fai crescere la tua startup</title>
-  <meta name="description" content="La tua conulenza per la crescita. Aumentiamo il tuo ROI grazie al Growth Hacking e Agile. Prenota 15 Minuti di consulenza gratuita."/>
+  <title>Growth-X | Avvia la tua Startup in Italia</title>
+  <meta name="description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita."/>
 
   <!-- FB open graph -->
   <meta property="og:url" content="http://growthxitalia.com" /> 
   <meta property="og:title" content="Growth-X | Fai crescere la tua startup" /> 
   <meta property="og:image" content="http://growthxitalia.com/growthx.png" /> 
-  <meta property="og:description" content="La tua consulenza per la crescita. Aumentiamo il tuo ROI grazie al Growth Hacking e Agile. Prenota 15 Minuti di consulenza gratuita." />
+  <meta property="og:description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita." />
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -54,9 +54,9 @@
     <div class="section-intro no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center">TAKE YOUR BUSINESS TO THE NEXT LEVEL</h1>
+        <h1 class="header center">CREA LA TUA STARTUP INNOVATIVA IN ITALIA</h1>
         <div class="row center">
-          <h5 class="header-subtitle col s12 light">Sfrutta la nostra consulenza e i nostri Tools per far crescere il tuo business</h5>
+          <h5 class="header-subtitle col s12 light">Sfrutta la nostra consulenza e i nostri Tools per creare tua startup</h5>
         </div>
         <div class="row center">
           <a href="#servizio" class="btn-large btn-intro waves-effect waves-light tiffany-blue-text white-text">Scopri Come Funziona</a>
@@ -80,7 +80,7 @@
   	            <h2 class="center tiffany-blue-text"><i class="material-icons">timeline</i></h2>
   	            <h5 class="center">GROWTH STRATEGY</h5><br><br>
 
-  	            <h5 class="center light tiffany-blue-text">Applichiamo una strategia di growth marketig personalizzata per far crescere il tuo business.</h5>
+  	            <h5 class="center light tiffany-blue-text">Applica la strategia Lean Startup personalizzata per far partire il tuo business.</h5>
   	          </div>
   	        </div>
 
@@ -98,7 +98,7 @@
   	            <h2 class="center tiffany-blue-text"><i class="material-icons">desktop_mac</i></h2>
   	            <h5 class="center">WEB & PRODUCT DEVELOPMENT</h5><br>
 
-  	            <h5 class="center light tiffany-blue-text">Costruiamo un prototipo del tuo prodotto su misura per i tuoi utenti per una migliore user experience.</h5>
+  	            <h5 class="center light tiffany-blue-text">Imparo come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
   	          </div>
   	        </div>
   	      </div> 
@@ -112,7 +112,7 @@
       <div class="container">
         <div class="row center">
           <i class="material-icons registrazione-icon">mail</i>
-          <h3 class="col s12 light">Sei alla ricerca di un team che faccia crescere il tuo business?</h3>
+          <h3 class="col s12 light">Sei alla ricerca di un team che ti aiuti con la creazione della tua startup?</h3>
           <h5 class="col s12">Registrati per rimanere aggiornato sul rilascio della versione beta</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
@@ -143,9 +143,9 @@
         <div class="col s12 center">
           <i class="center material-icons contatti-icon tiffany-blue-text">contact_mail</i><br><br><br>
           <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light tiffany-blue-text white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
-          <h5 class="col s12 contatti-subtitle">Vuoi aumentare il ROI dei tuoi canali di marketing grazie ad un vero team di crescita?
+          <h5 class="col s12 contatti-subtitle">Vuoi creare il business che hai sempre desiderato?
           <br>
-          Siamo l'unica azienda in Italia che offre un team di crescita dedicato ad ogni cliente.</h5><br>
+          Siamo l'unica Startup in Italia che offre un team di crescita dedicato ad ogni cliente.</h5><br>
         </div>
       </div>
 
