--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   	            <h2 class="center tiffany-blue-text"><i class="material-icons">tune</i></h2>
   	            <h5 class="center">CONVERSION RATE OPTIMIZATION</h5><br>
 
-  	            <h5 class="center light tiffany-blue-text">Analizziamo i dati per aumentare la tua audience e rendere il tuo prodotto virale.</h5>
+  	            <h5 class="center light tiffany-blue-text">Analizza i dati per aumentare la tua audience e rendere il tuo prodotto virale.</h5>
   	          </div>
   	        </div>
 
@@ -98,7 +98,7 @@
   	            <h2 class="center tiffany-blue-text"><i class="material-icons">desktop_mac</i></h2>
   	            <h5 class="center">WEB & PRODUCT DEVELOPMENT</h5><br>
 
-  	            <h5 class="center light tiffany-blue-text">Imparo come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
+  	            <h5 class="center light tiffany-blue-text">Impara come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
   	          </div>
   	        </div>
   	      </div> 
