--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- FB open graph -->
   <meta property="og:url" content="http://growthxitalia.com" /> 
   <meta property="og:title" content="Growth-X | Fai crescere la tua startup" /> 
-  <meta property="og:image" content="http://growthxitalia.com/growthx.png" /> 
+  <meta property="og:image" content="http://growthxitalia.com/pexels-photo-908288.jpg" /> 
   <meta property="og:description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita." />
 
   <!-- CSS  -->
