--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Growth-X | Avvia la tua Startup in Italia</title>
+  <title>Growth-X | Avvia la tua Startup in Italia a basso costo con il nostro servizio</title>
   <meta name="description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita."/>
 
   <!-- FB open graph -->
   <meta property="og:url" content="http://growthxitalia.com" /> 
-  <meta property="og:title" content="Growth-X | Fai crescere la tua startup" /> 
+  <meta property="og:title" content="Growth-X | Crea la tua startup a basso costo. " /> 
   <meta property="og:image" content="http://growthxitalia.com/background4.jpg" /> 
   <meta property="og:description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita." />
 
