--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Growth-X | Avvia la tua Startup in Italia a basso costo con il nostro servizio</title>
+  <title>Growth-X | Avvia la tua Startup in Italia a basso costo</title>
   <meta name="description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita."/>
 
   <!-- FB open graph -->
