--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="section-intro no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center">CREA LA TUA STARTUP INNOVATIVA IN ITALIA</h1>
+        <h1 class="header center">AVVIA LA TUA STARTUP INNOVATIVA A BASSO COSTO IN ITALIA</h1>
         <div class="row center">
           <h5 class="header-subtitle col s12 light">Sfrutta la nostra consulenza e i nostri Tools per creare tua startup</h5>
         </div>
