--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light tiffany-blue-text white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
           <h5 class="col s12 contatti-subtitle">Vuoi creare il business che hai sempre desiderato?
           <br>
-          Siamo l'unica Startup in Italia che offre un team di crescita dedicato ad ogni cliente.</h5><br>
+          Non perdere tempo! Noi siamo qui per aiutarti ad avviare la tua starup ad un costo veramente basso.</h5><br>
         </div>
       </div>
 
