--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <!-- FB open graph -->
   <meta property="og:url" content="http://growthxitalia.com" /> 
   <meta property="og:title" content="Growth-X | Crea la tua startup a basso costo. " />
-  <meta property="og:type" content="website"> 
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Growth-X"> 
   <meta property="og:image" content="http://growthxitalia.com/background4.jpg" /> 
   <meta property="og:description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita." />
 
