--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <meta property="og:image" content="http://growthxitalia.com/background4.jpg" /> 
   <meta property="og:description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita." />
 
+  <!-- Twitter card -->
+  <meta property="twitter:image" content="http://growthxitalia.com/background4.jpg" />
+  <meta property="twitter:title" content="Growth-X | Crea la tua startup a basso costo." />
+  <meta property="twitter:description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita." />
+
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
