--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
   <meta property="og:description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita." />
 
   <!-- Twitter card -->
-  <meta property="twitter:image" content="http://growthxitalia.com/background4.jpg" />
-  <meta property="twitter:title" content="Growth-X | Crea la tua startup a basso costo." />
-  <meta property="twitter:description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita." />
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@Growthx4">
+  <meta name="twitter:title" content="Growth-X">
+  <meta name="twitter:description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita.">
+  <meta name="twitter:creator" content="@Growthx4">
+  <meta name="twitter:image" content="http://growthxitalia.com/background4.jpg">
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
