--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   	        <div class="col s12 m4">
   	          <div class="icon-block">
   	            <h2 class="center tiffany-blue-text"><i class="material-icons">timeline</i></h2>
-  	            <h5 class="center">GROWTH STRATEGY</h5><br>
+  	            <h5 class="center">GROWTH STRATEGY</h5><br><br>
 
   	            <h5 class="center light tiffany-blue-text">Applica la strategia Lean Startup personalizzata per far partire il tuo business.</h5>
   	          </div>
