--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<!-- Fixed NavBar --> 
 	<div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper materialize-viola">
         <a href="#!" class="brand-logo"><bold>GROWTH-X</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
