--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <h5 class="header-subtitle col s12 light">Sfrutta la nostra consulenza e i nostri Tools per creare tua startup</h5>
         </div>
         <div class="row center">
-          <a href="#servizio" class="btn-large btn-intro waves-effect waves-light materialize-viola white-text">Scopri Come Funziona</a>
+          <a href="#servizio" class="btn-large btn-intro waves-effect waves-light materialize-orange white-text">Scopri Come Funziona</a>
         </div>
         <br><br>
 
@@ -101,7 +101,7 @@
   	      <div class="row">
   	        <div class="col s12 m4">
   	          <div class="icon-block">
-  	            <h2 class="center materialize-viola"><i class="material-icons">timeline</i></h2>
+  	            <h2 class="center materialize-viola-text"><i class="material-icons">timeline</i></h2>
   	            <h5 class="center">GROWTH STRATEGY</h5><br><br>
 
   	            <h5 class="center light materialize-viola">Applica la strategia Lean Startup personalizzata per far partire il tuo business.</h5>
@@ -110,19 +110,19 @@
 
   	        <div class="col s12 m4">
   	          <div class="icon-block">
-  	            <h2 class="center materialize-viola"><i class="material-icons">tune</i></h2>
+  	            <h2 class="center materialize-viola-text"><i class="material-icons">tune</i></h2>
   	            <h5 class="center">CONVERSION RATE OPTIMIZATION</h5><br>
 
-  	            <h5 class="center light materialize-viola">Analizza i dati per aumentare la tua audience e rendere il tuo prodotto virale.</h5>
+  	            <h5 class="center light materialize-viola-text">Analizza i dati per aumentare la tua audience e rendere il tuo prodotto virale.</h5>
   	          </div>
   	        </div>
 
   	        <div class="col s12 m4">
   	          <div class="icon-block">
-  	            <h2 class="center materialize-viola"><i class="material-icons">desktop_mac</i></h2>
+  	            <h2 class="center materialize-viola-text"><i class="material-icons">desktop_mac</i></h2>
   	            <h5 class="center">WEB & PRODUCT DEVELOPMENT</h5><br>
 
-  	            <h5 class="center light materialize-viola">Impara come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
+  	            <h5 class="center light materialize-viola-text">Impara come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
   	          </div>
   	        </div>
   	      </div> 
