--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
   	      <div class="row">
   	        <div class="col s12 m4">
   	          <div class="icon-block">
-  	            <h2 class="center materialize-viola-text"><i class="material-icons">timeline</i></h2>
+  	            <h2 class="center materialize-orange-text"><i class="material-icons">timeline</i></h2>
   	            <h5 class="center">GROWTH STRATEGY</h5><br><br>
 
-  	            <h5 class="center light materialize-viola">Applica la strategia Lean Startup personalizzata per far partire il tuo business.</h5>
+  	            <h5 class="center light materialize-viola-text">Applica la strategia Lean Startup personalizzata per far partire il tuo business.</h5>
   	          </div>
   	        </div>
 
   	        <div class="col s12 m4">
   	          <div class="icon-block">
-  	            <h2 class="center materialize-viola-text"><i class="material-icons">tune</i></h2>
+  	            <h2 class="center materialize-orange-text"><i class="material-icons">tune</i></h2>
   	            <h5 class="center">CONVERSION RATE OPTIMIZATION</h5><br>
 
   	            <h5 class="center light materialize-viola-text">Analizza i dati per aumentare la tua audience e rendere il tuo prodotto virale.</h5>
@@ -119,7 +119,7 @@
 
   	        <div class="col s12 m4">
   	          <div class="icon-block">
-  	            <h2 class="center materialize-viola-text"><i class="material-icons">desktop_mac</i></h2>
+  	            <h2 class="center materialize-orange-text"><i class="material-icons">desktop_mac</i></h2>
   	            <h5 class="center">WEB & PRODUCT DEVELOPMENT</h5><br>
 
   	            <h5 class="center light materialize-viola-text">Impara come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
