--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <form action="https://facebook.us19.list-manage.com/subscribe/post?u=886a7919d9a3077ae6f63161c&amp;id=ebd15af490" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                   <div id="mc_embed_signup_scroll">                
                     <input type="email" value="" name="EMAIL" class="validate white center black-text" id="mce-EMAIL" placeholder="Inserisci qui la tua email!" required>
-                    <button class="btn btn-registrazione waves-effect waves-light tiffany-blue-text white-text" type="submit" name="action">Voglio Registrarmi!</button>
+                    <button class="btn btn-registrazione waves-effect waves-light materialize-orange white-text" type="submit" name="action">Voglio Registrarmi!</button>
                   </div>
                 </form>
               </div>
@@ -165,8 +165,8 @@
     <div class="section-contatti">
       <div class="row">
         <div class="col s12 center">
-          <i class="center material-icons contatti-icon tiffany-blue-text">contact_mail</i><br><br><br>
-          <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light tiffany-blue-text white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
+          <i class="center material-icons contatti-icon materialize-orange">contact_mail</i><br><br><br>
+          <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-orange white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
           <h5 class="col s12 contatti-subtitle">Vuoi creare il business che hai sempre desiderato?
           <br>
           Non perdere tempo! Noi siamo qui per aiutarti ad avviare la tua starup ad un costo veramente basso.</h5><br>
