--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="section-contatti">
       <div class="row">
         <div class="col s12 center">
-          <i class="center material-icons contatti-icon materialize-orange">contact_mail</i><br><br><br>
+          <i class="center material-icons contatti-icon materialize-orange-text">contact_mail</i><br><br><br>
           <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-orange white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
           <h5 class="col s12 contatti-subtitle">Vuoi creare il business che hai sempre desiderato?
           <br>
