--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <br><br>
         <h1 class="header center">AVVIA LA TUA STARTUP INNOVATIVA A BASSO COSTO IN ITALIA</h1>
         <div class="row center">
-          <h5 class="header-subtitle col s12 light">Sfrutta la nostra consulenza e i nostri Tools per creare tua startup</h5>
+          <h5 class="header-subtitle col s12 light">Sfrutta la nostra consulenza e i nostri Tools per creare la tua startup</h5>
         </div>
         <div class="row center">
           <a href="#servizio" class="btn-large btn-intro waves-effect waves-light materialize-orange white-text">Scopri Come Funziona</a>
