--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div class="row">
         <div class="col l12 s12 center">
           <h5 class="white-text">Contatti</h5>
-          <a href="mailto:marcomn87@icloud.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+          <a href="mailto:info@growthxitalia.com" class="social-icon"><i class="fas fa-envelope"></i></a>
           <a href="https://www.facebook.com/Growth-X-777693825688110/" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
           <a href="https://twitter.com/GrowthX4" target="_blank" class="social-icon"><i class="fab fa-twitter"></i></a>
         </div>
