--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<!-- Fixed NavBar --> 
 	<div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper materialize-viola">
+      <div class="nav-wrapper materialize-blue">
         <a href="#!" class="brand-logo"><bold>GROWTH-X</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
@@ -83,7 +83,7 @@
           <h5 class="header-subtitle col s12 light">Fatti guidare dalla nostra consulenza e i nostri Tools per creare la tua startup</h5>
         </div>
         <div class="row center">
-          <a href="#servizio" class="btn-large btn-intro waves-effect waves-light materialize-orange white-text">Scopri Come Funziona</a>
+          <a href="#servizio" class="btn-large btn-intro waves-effect waves-light materialize-verde white-text">Scopri Come Funziona</a>
         </div>
         <br><br>
 
