--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   	            <h2 class="center materialize-azzurro-text"><i class="material-icons">timeline</i></h2>
   	            <h5 class="center">GROWTH STRATEGY</h5><br><br>
 
-  	            <h5 class="center light materialize-blu-text">Applica la strategia Lean Startup personalizzata per far partire il tuo business.</h5>
+  	            <h5 class="center light materialize-grigio-text">Applica la strategia Lean Startup personalizzata per far partire il tuo business.</h5>
   	          </div>
   	        </div>
 
@@ -113,7 +113,7 @@
   	            <h2 class="center materialize-azzurro-text"><i class="material-icons">tune</i></h2>
   	            <h5 class="center">CONVERSION RATE OPTIMIZATION</h5><br>
 
-  	            <h5 class="center light materialize-blu-text">Analizza i dati per aumentare la tua audience e rendere il tuo prodotto virale.</h5>
+  	            <h5 class="center light materialize-grigio-text">Analizza i dati per aumentare la tua audience e rendere il tuo prodotto virale.</h5>
   	          </div>
   	        </div>
 
@@ -122,7 +122,7 @@
   	            <h2 class="center materialize-azzurro-text"><i class="material-icons">desktop_mac</i></h2>
   	            <h5 class="center">WEB & PRODUCT DEVELOPMENT</h5><br>
 
-  	            <h5 class="center light materialize-blu-text">Impara come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
+  	            <h5 class="center light materialize-grigio-text">Impara come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
   	          </div>
   	        </div>
   	      </div> 
@@ -146,7 +146,7 @@
                 <form action="https://facebook.us19.list-manage.com/subscribe/post?u=886a7919d9a3077ae6f63161c&amp;id=ebd15af490" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                   <div id="mc_embed_signup_scroll">                
                     <input type="email" value="" name="EMAIL" class="validate white center black-text" id="mce-EMAIL" placeholder="Inserisci qui la tua email!" required>
-                    <button class="btn btn-registrazione waves-effect waves-light materialize-orange white-text" type="submit" name="action">Voglio Registrarmi!</button>
+                    <button class="btn btn-registrazione waves-effect waves-light materialize-verde white-text" type="submit" name="action">Voglio Registrarmi!</button>
                   </div>
                 </form>
               </div>
