--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="row">
         <div class="col s12 center">
           <i class="center material-icons contatti-icon materialize-azzurro-text">contact_mail</i><br><br><br>
-          <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-azzurro white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
+          <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-verde white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
           <h5 class="col s12 contatti-subtitle">Vuoi creare il business che hai sempre desiderato?
           <br>
           Non perdere tempo! Noi siamo qui per aiutarti ad avviare la tua starup ad un costo veramente basso.</h5><br>
@@ -190,7 +190,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      2018 &copy <a class="brown-text text-lighten-3" href="http://materializecss.com" target="_blank">Growth-X ALL RIGHT RESERVED</a>
+      2018 &copy <a class="brown-text text-lighten-3" href="http://materializecss.com" target="_blank">GROWTH-X | ALL RIGHT RESERVED</a>
       </div>
     </div>
   </footer>
