--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="section-intro no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center">AVVIA LA TUA STARTUP INNOVATIVA A BASSO COSTO IN ITALIA</h1>
+        <h1 class="header center">Avvia la tua startup innovativa a basso costo in italia.</h1>
         <div class="row center">
           <h5 class="header-subtitle col s12 light">Fatti guidare dalla nostra consulenza e i nostri Tools per creare la tua startup</h5>
         </div>
