--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-verde white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
           <h3 class="col s12 contatti-subtitle materialize-grigio-text">Vuoi creare il business che hai sempre desiderato? Non perdere tempo!</h3>
           <br>
-          <h5 class="col s12 contatti-subtitle materialize-grigio-text">Siamo qui per aiutarti ad avviare la tua starup ad un costo veramente basso.</h5><br>
+          <h5 class="col s12 contatti-subtitle materialize-grigio-text">Siamo qui per aiutarti ad avviare la tua starup ad un costo veramente basso. Prenota la consulenza e scopri di più sul sevizio.</h5><br>
         </div>
       </div>
 
