--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
     src="https://www.facebook.com/tr?id=1861580800593104&ev=PageView&noscript=1"
   /></noscript>
 
+  <script>
+  fbq('track', 'Lead');
+  </script>
+
+  <script>
+  fbq('track', 'CompleteRegistration');
+  </script>
+
+  <script>
+  fbq('track', 'ViewContent');
+  </script>
+
 </head>
 <body>
 
