--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
   	            <h5 class="center light materialize-grigio-text">Impara come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
   	          </div>
-                <div class='prefinery-form-embed'>                </div>
+                <div class='col s12 prefinery-form-embed'>                </div>
   	        </div>
   	      </div> 
 	  </div>    
