--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
   	            <h5 class="center">WEB & PRODUCT DEVELOPMENT</h5><br>
 
   	            <h5 class="center light materialize-grigio-text">Impara come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
-  	          </div><br><br>
-                <div class='col s12 offset-l3 prefinery-form-embed'>                </div>
+  	          </div>
+                <div class='prefinery-form-embed'>                </div>
   	        </div>
   	      </div> 
 	  </div>    
