--- a/index.html
+++ b/index.html
@@ -171,9 +171,8 @@
   	            <h5 class="center">WEB & PRODUCT DEVELOPMENT</h5><br>
 
   	            <h5 class="center light materialize-grigio-text">Impara come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
-  	          </div>
-                <div class="input-field col s12 l6 offset-l3"></div>
-                  <div class='btn-form prefinery-form-embed'>                </div>
+  	          </div>               
+                <div class='btn-form prefinery-form-embed center'>                </div>
   	        </div>
   	      </div> 
 	  </div>    
