--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
   	          </div>               
   	        </div>
   	      </div> 
-          <div class='btn-form prefinery-form-embed center'>                </div>
+          
+          <div class='col l6 offset-l3 btn-form prefinery-form-embed'>           
+          </div>
 	  </div>    
     </div>
   </div>
