--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   	        </div>
   	      </div> 
           
-          <div class='col l6 offset-l3 btn-form prefinery-form-embed'>           
+          <div class='col s12 offset-l3 btn-form prefinery-form-embed'>           
           </div>
 	  </div>    
     </div>
