--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   	        </div>
   	      </div> 
           
-          <div class='btn-large prefinery-form-embed'>           
+          <div class='prefinery-form-embed'>           
           </div>
 	  </div>    
     </div>
