--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <h5 class="header-subtitle col s12 light">Fatti guidare dalla nostra consulenza e i nostri Tools per creare la tua startup</h5>
         </div>
         <div class="row center">
-          <a href="#servizio" class="btn-large btn-intro waves-effect waves-light materialize-verde white-text">Scopri Come Funziona</a>
+          <a href="#servizio" class="btn-large btn-intro waves-effect waves-light materialize-rosso white-text">Scopri Come Funziona</a>
         </div>
         <br><br>
 
@@ -194,7 +194,7 @@
                 <form action="https://facebook.us19.list-manage.com/subscribe/post?u=886a7919d9a3077ae6f63161c&amp;id=ebd15af490" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                   <div id="mc_embed_signup_scroll">                
                     <input type="email" value="" name="EMAIL" class="validate white center black-text" id="mce-EMAIL" placeholder="Inserisci qui la tua email!" required>
-                    <button class="btn btn-registrazione waves-effect waves-light materialize-verde white-text" type="submit" name="action">Voglio Registrarmi!</button>
+                    <button class="btn btn-registrazione waves-effect waves-light materialize-rosso white-text" type="submit" name="action">Voglio Registrarmi!</button>
                   </div>
                 </form>
               </div>
@@ -214,7 +214,7 @@
       <div class="row">
         <div class="col s12 center">
           <i class="center material-icons contatti-icon materialize-azzurro-text">contact_mail</i><br><br><br>
-          <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-verde white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
+          <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-rosso white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
           <h3 class="col s12 contatti-subtitle materialize-grigio-text">Vuoi creare il business che hai sempre desiderato? Non perdere tempo!</h3>
           <br>
           <h5 class="col s12 contatti-subtitle materialize-grigio-text">Siamo qui per aiutarti ad avviare la tua starup ad un costo veramente basso. Prenota la consulenza e scopri di più sul sevizio.</h5><br>
