--- a/servizio.html
+++ b/servizio.html
@@ -12,7 +12,7 @@
   
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Growth-X | Avvia la tua Startup in Italia a basso costo</title>
+  <title>Growth-X | Servizio</title>
   <meta name="description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita."/>
 
   <!-- FB open graph -->
@@ -101,80 +101,22 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-	<!-- Fixed NavBar --> 
-	<div class="navbar-fixed">
+  <!-- Fixed NavBar --> 
+  <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper materialize-blue">
         <a href="#!" class="brand-logo"><bold>GROWTH-X</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#servizio">Servizio</a></li>
-          <li><a href="#registrazione">Registrati</a></li>
+          <li><a href="#index.html">Home</a></li>
           <li><a href="#contatti">Contattaci</a></li>
         </ul>
         <ul class="sidenav" id="mobile-demo">
-          <li><a href="#servizio">Servizio</a></li>
-          <li><a href="#registrazione">Registrati</a></li>
+          <li><a href="#index.html">Home</a></li>
           <li><a href="#contatti">Contattaci</a></li>
         </ul>
       </div>
     </nav>
-  </div>
-
-  <!-- Intro -->
-  <div id="index-banner" class="parallax-container">
-    <div class="section-intro no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center">Avvia la tua startup innovativa a basso costo in italia.</h1>
-        <div class="row center">
-          <h5 class="header-subtitle col s12 light">Fatti guidare dalla nostra consulenza e i nostri Tools per creare la tua startup</h5>
-        </div>
-        <div class="row center">
-          <a href="#servizio" class="btn-large btn-intro waves-effect waves-light materialize-rosso white-text">Scopri Come Funziona</a>
-        </div>
-        <br><br>
-      </div>
-    </div>
-    <div class="parallax"><img src="background4.jpg" alt="Unsplashed background img 1"></div>
-  </div>
-
-  <!-- Servizio -->
-  <div id="servizio" class="container">
-    <div class="section-servizio">
-      <div class="col-servizio">
-
-	      <!--   Icon Section   -->
-  	      <div class="row">
-  	        <div class="col s12 m4">
-  	          <div class="icon-block">
-  	            <h2 class="center materialize-azzurro-text"><i class="material-icons">timeline</i></h2>
-  	            <h5 class="center">GROWTH STRATEGY</h5><br><br>
-
-  	            <h5 class="center light materialize-grigio-text">Applica la strategia Lean Startup personalizzata per far partire il tuo business.</h5>
-  	          </div>
-  	        </div>
-
-  	        <div class="col s12 m4">
-  	          <div class="icon-block">
-  	            <h2 class="center materialize-azzurro-text"><i class="material-icons">tune</i></h2>
-  	            <h5 class="center">CONVERSION RATE OPTIMIZATION</h5><br>
-
-  	            <h5 class="center light materialize-grigio-text">Analizza i dati per aumentare la tua audience e rendere il tuo prodotto virale.</h5>
-  	          </div>
-  	        </div>
-
-  	        <div class="col s12 m4">
-  	          <div class="icon-block">
-  	            <h2 class="center materialize-azzurro-text"><i class="material-icons">desktop_mac</i></h2>
-  	            <h5 class="center">WEB & PRODUCT DEVELOPMENT</h5><br>
-
-  	            <h5 class="center light materialize-grigio-text">Impara come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
-  	          </div>               
-  	        </div>
-  	      </div> 
-	  </div>    
-    </div>
   </div>
 
   <!-- Registrazione -->
@@ -197,73 +139,11 @@
                   </div>
                 </form>
               </div>
-
 <!--End mc_embed_signup-->
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 2"></div>
-  </div>
-
-  <!-- Contattaci -->
-  <div id="contatti" class="container">
-    <div class="section-contatti">
-      <div class="row">
-        <div class="col s12 center">
-          <i class="center material-icons contatti-icon materialize-azzurro-text">contact_mail</i><br><br><br>
-          <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-rosso white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
-          <h3 class="col s12 contatti-subtitle materialize-grigio-text">Vuoi creare il business che hai sempre desiderato? Non perdere tempo!</h3>
-          <br>
-          <h5 class="col s12 contatti-subtitle materialize-grigio-text">Siamo qui per aiutarti ad avviare la tua starup ad un costo veramente basso. Prenota la consulenza e scopri di più sul sevizio.</h5><br>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <!-- Footer -->
-  <footer class="page-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col l12 s12 center">
-          <h5 class="white-text">Contatti</h5>
-          <a href="mailto:info@growthxitalia.com" class="social-icon"><i class="fas fa-envelope"></i></a>
-          <a href="https://www.facebook.com/Growth-X-777693825688110/" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://twitter.com/GrowthX4" target="_blank" class="social-icon"><i class="fab fa-twitter"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      2018 &copy <a class="brown-text text-lighten-3" href="http://materializecss.com" target="_blank">GROWTH-X | ALL RIGHT RESERVED</a>
-      </div>
-    </div>
-  </footer>
-
-
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
-  <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> 
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125160057-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-125160057-1');
-  </script>
-
-  <!-- Subrscibers -->
-  <script type="text/javascript">
-  var subscribersSiteId = 'ENTER SITE ID HERE';
-  </script>
-  <script type="text/javascript" src="https://cdn.subscribers.com/assets/subscribers.js">    
-  </script>
-
-  </body>
-</html>
+    <div class="parallax"><img src="..\C:\Users\Windows\Desktop\Growth-x\background3.jpg" alt="Unsplashed background img 2"></div>
+  </div> 
