Cambiato testo e immagini A/B test

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Growth-X | Avvia la tua Startup in Italia a basso costo</title>
-  <meta name="description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita."/>
+  <title>Startup | Avvia la tua Startup a basso costo in italia</title>
+  <meta name="description" content="Crea una startup a basso costo in italia. Cos'è una startup e come si avvia: formazione e finanziamenti, consigli per avviarla con successo."/>
 
   <!-- FB open graph -->
   <meta property="og:url" content="http://growthxitalia.com" /> 
-  <meta property="og:title" content="Growth-X | Crea la tua startup a basso costo. " />
+  <meta property="og:title" content="Startup | Crea la tua startup a basso costo, ottieni finanziamenti. " />
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Growth-X"> 
   <meta property="og:image" content="http://growthxitalia.com/background4.jpg" /> 
-  <meta property="og:description" content="Crea una startup in Italia con meno di 1000 Euro. Sfrutta la nostra consulenza per avviare la tua startup. Prenota 15 minuti di consulenza gratuita." />
+  <meta property="og:description" content="Crea una startup a basso costo in italia. Cos'è una startup e come si avvia: formazione e finanziamenti, consigli per avviarla con successo." />
 
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary">
@@ -124,7 +124,7 @@
         <br><br>
         <h1 class="header center">Avvia la tua startup innovativa a basso costo in italia.</h1>
         <div class="row center">
-          <h5 class="header-subtitle col s12 light">Fatti guidare dalla nostra consulenza e i nostri Tools per creare la tua startup</h5>
+          <h5 class="header-subtitle col s12 light">Crea la tua startup, avviala con successo, ottieni i finaziamenti. </h5>
         </div>
         <div class="row center">
           <a href="#servizio" class="btn-large btn-intro waves-effect waves-light materialize-rosso white-text">Scopri Come Funziona</a>
@@ -145,18 +145,18 @@
   	        <div class="col s12 m4">
   	          <div class="icon-block">
   	            <h2 class="center materialize-azzurro-text"><i class="material-icons">timeline</i></h2>
-  	            <h5 class="center">GROWTH STRATEGY</h5><br><br>
+  	            <h5 class="center">Lean Starup</h5><br><br>
 
-  	            <h5 class="center light materialize-grigio-text">Applica la strategia Lean Startup personalizzata per far partire il tuo business.</h5>
+  	            <h5 class="center light materialize-grigio-text">Impara come applicare la metodologia Lean Startup per avviare il tuo business con sucesso.</h5>
   	          </div>
   	        </div>
 
   	        <div class="col s12 m4">
   	          <div class="icon-block">
-  	            <h2 class="center materialize-azzurro-text"><i class="material-icons">tune</i></h2>
-  	            <h5 class="center">CONVERSION RATE OPTIMIZATION</h5><br>
+  	            <h2 class="center materialize-azzurro-text"><i class="material-icons">search</i></h2>
+  	            <h5 class="center">SCOPRI LA TUA AUDIENCE</h5><br>
 
-  	            <h5 class="center light materialize-grigio-text">Analizza i dati per aumentare la tua audience e rendere il tuo prodotto virale.</h5>
+  	            <h5 class="center light materialize-grigio-text">Facciamo ricerche di mercato per aumentare la tua audience e rendere il tuo prodotto virale.</h5>
   	          </div>
   	        </div>
 
@@ -165,7 +165,7 @@
   	            <h2 class="center materialize-azzurro-text"><i class="material-icons">desktop_mac</i></h2>
   	            <h5 class="center">WEB & PRODUCT DEVELOPMENT</h5><br>
 
-  	            <h5 class="center light materialize-grigio-text">Impara come realizzare un prototipo del tuo prodotto su misura per i tuoi utenti.</h5>
+  	            <h5 class="center light materialize-grigio-text">Realizziamo una Landing Page del tuo prodotto su misura per la tua azienda e per una migliore user experience.</h5>
   	          </div>               
   	        </div>
   	      </div> 
@@ -179,7 +179,7 @@
       <div class="container">
         <div class="row center">
           <i class="material-icons registrazione-icon">mail</i>
-          <h3 class="col s12 light">Sei alla ricerca di un team che ti aiuti con la creazione della tua startup?</h3>
+          <h3 class="col s12 light">Vuoi creare una startup, formarti, o ottenere finanziamenti?</h3>
           <h5 class="col s12">Registrati per rimanere aggiornato sul rilascio della versione beta</h5>
           <div class="row">
             <div class="input-field col s12 l6 offset-l3">
@@ -208,14 +208,13 @@
     <div class="section-contatti">
       <div class="row">
         <div class="col s12 center">
-          <i class="center material-icons contatti-icon materialize-azzurro-text">contact_mail</i><br><br><br>
-          <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-rosso white-text" href="https://marcomn87.typeform.com/to/mYzYRC" data-mode="popup" target="_blank">prenota 15 minuti di consulenza gratuita</a> 
-          <h3 class="col s12 contatti-subtitle materialize-grigio-text">Vuoi creare il business che hai sempre desiderato? Non perdere tempo!</h3>
+          <i class="center material-icons contatti-icon materialize-azzurro-text">book</i><br><br><br>
+          <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-rosso white-text" href="https://amzn.to/2NxZdrM" data-mode="popup" target="_blank">Sarica la guida</a>
+          <h3 class="col s12 contatti-subtitle materialize-grigio-text">Se hai bisogno di fomazione puoi iniziare scaricando la nostra breve guida per imparare i processi fondamnetali per avviare la tua startup.</h3><br> 
+          <h5 class="col s12 contatti-subtitle materialize-grigio-text">Hai già avviato la tua startup ma hai bisogno di finanziamneti? Contattaci, abbiamo noi i contatti che ti servono. Verrai presentato alla nostra azienda partner numero uno in italia per trovare finanziamenti per le startup.</h5>
           <br>
-          <h5 class="col s12 contatti-subtitle materialize-grigio-text">Siamo qui per aiutarti ad avviare la tua starup ad un costo veramente basso. Prenota la consulenza e scopri di più sul sevizio.</h5><br>
         </div>
       </div>
-
     </div>
   </div>
 
