--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="background4.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
   <!-- Servizio -->
@@ -145,7 +145,7 @@
   	        <div class="col s12 m4">
   	          <div class="icon-block">
   	            <h2 class="center materialize-azzurro-text"><i class="material-icons">timeline</i></h2>
-  	            <h5 class="center">Lean Starup</h5><br><br>
+  	            <h5 class="center">LEAN STARTUP</h5><br><br>
 
   	            <h5 class="center light materialize-grigio-text">Impara come applicare la metodologia Lean Startup per avviare il tuo business con sucesso.</h5>
   	          </div>
@@ -211,7 +211,7 @@
           <i class="center material-icons contatti-icon materialize-azzurro-text">book</i><br><br><br>
           <a class="typeform-share col l6 offset-l3 btn btn-contatti waves-effect waves-light materialize-rosso white-text" href="https://amzn.to/2NxZdrM" data-mode="popup" target="_blank">Sarica la guida</a>
           <h3 class="col s12 contatti-subtitle materialize-grigio-text">Se hai bisogno di fomazione puoi iniziare scaricando la nostra breve guida per imparare i processi fondamnetali per avviare la tua startup.</h3><br> 
-          <h5 class="col s12 contatti-subtitle materialize-grigio-text">Hai già avviato la tua startup ma hai bisogno di finanziamneti? Contattaci, abbiamo noi i contatti che ti servono. Verrai presentato alla nostra azienda partner numero uno in italia per trovare finanziamenti per le startup.</h5>
+          <h5 class="col s12 contatti-subtitle materialize-grigio-text">Hai già avviato la tua startup, ma hai bisogno di finanziamneti? Contattaci, abbiamo noi i contatti che ti servono. Verrai presentato alla nostra azienda partner numero uno in italia per trovare finanziamenti per le startup.</h5>
           <br>
         </div>
       </div>
