cambiato meta description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Startup | Avvia la tua Startup a basso costo in italia</title>
-  <meta name="description" content="Crea una startup a basso costo in italia. Cos'è una startup e come si avvia: formazione e finanziamenti, consigli per avviarla con successo."/>
+  <meta name="description" content="Crea la tua startup a basso costo in italia. Scopri la tua audience, ottieni finanziamenti, crea la tua azienda di successo. Registrati!"/>
 
   <!-- FB open graph -->
   <meta property="og:url" content="http://growthxitalia.com" /> 
@@ -21,7 +21,7 @@
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Growth-X"> 
   <meta property="og:image" content="http://growthxitalia.com/background4.jpg" /> 
-  <meta property="og:description" content="Crea una startup a basso costo in italia. Cos'è una startup e come si avvia: formazione e finanziamenti, consigli per avviarla con successo." />
+  <meta property="og:description" content="Crea la tua startup a basso costo in italia. Scopri la tua audience, ottieni finanziamenti, crea la tua azienda di successo. Registrati! />
 
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary">
