--- a/index.html
+++ b/index.html
@@ -207,8 +207,9 @@
   <!-- Init -->
   <script src="js/libs.js"></script>
   <!-- typeformo -->
-  <script src="js/libs.js"></script> 
-
+  <script src="js/libs.js"></script>
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/4981168.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125160057-1"></script>
   <script src="js/googleanalytics.js"></script>
