--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="page-footer">
+  <footer class="page-footer materialize-blue">
     <div class="container">
       <div class="row">
         <div class="col l12 s12 center">
