--- a/index.html
+++ b/index.html
@@ -213,5 +213,8 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125160057-1"></script>
   <script src="js/googleanalytics.js"></script>
+  <!-- Gleam.io Free Giveway -->
+  <a class="e-widget no-button" href="https://gleam.io/ywU28/free-giveaway" rel="nofollow">Free Giveaway</a>
+  <script type="text/javascript" src="https://js.gleam.io/e.js" async="true"></script>
   </body>
 </html>
