--- a/index.html
+++ b/index.html
@@ -216,5 +216,7 @@
   <!-- Gleam.io Free Giveway -->
   <a class="e-widget no-button" href="https://gleam.io/ywU28/free-giveaway" rel="nofollow">Free Giveaway</a>
   <script type="text/javascript" src="https://js.gleam.io/e.js" async="true"></script>
+  <!-- Go to www.addthis.com/dashboard to customize your tools --> 
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5bb67159d0a98ee2"></script>
   </body>
 </html>
