--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="section-intro no-pad-bot">
         <div class="container">
           <br><br>
-          <h1 class="header center">Avvia la tua startup innovativa a basso costo in italia.</h1>
+          <h1 class="header center">Avvia la tua startup innovativa con successo in italia.</h1>
           <div class="row center">
             <h5 class="header-subtitle col s12 light">Crea la tua startup, avviala con successo, ottieni i finaziamenti. </h5>
           </div>
