--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   	<!-- Fixed NavBar --> 
   	<div class="navbar-fixed">
       <nav>
-        <div class="nav-wrapper materialize-blue">
+        <div class="nav-wrapper materialize-orange-shadowed">
           <a href="#!" class="brand-logo"><bold>GROWTH-X</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
